# semantic-similarity-llm-dating-app

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  custom_types.py  main.py  utils.py
backend/app/api/: routes.py  users.py  websocket.py
backend/app/models/: llm.py  match.py  user.py
backend/app/services/: embeddings_client.py  llm_client.py  prompts.py  state_manager.py
backend/app/testers/: gemini.py
backend/tests/: conftest.py  mocked_data.py  test_routes.py  test_utils.py  test_websocket.py
client/: pyproject.toml
client/app/: main.py  utils.py
