[tool.poetry]
name = "dating-app-client"
version = "0.1.0"
description = "A command-line client for the dating app backend"
authors = ["Naty Laza"]
packages = [
    { include = "app" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
websockets = "^13.1"
httpx = "~0.27.2"